@@ -1,6 +1,12 @@
 2013-05-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/action/kick_table.cpp:
+	- ボールをこぼすかもしれないノードはリスキーノードとして扱わないよ
+	うに変更
+	- 目標スピードを達成できていない場合はリスキーノードを使用した計算
+	を実行するように条件を変更
+
+	* rcsc/action/kick_table.cpp:
 	* rcsc/action/kick_table.h:
 	- キック列探索アルゴリズムを改善．リスキーなノードを省いた探索とリ
 	スキーなノードのみの探索に分けて実行し，安全なキック列が生成されやすくした
